welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: value unary_!_= is not a member of Boolean
while(!x=false){
      ^BDRBuggle:4: error: not found: value baissebrosse
	baissebrosse();
        ^